style/sekoiaio.scss
:root {
    --md-default-fg-color: #212223;
    --md-text-font: 'Inter', sans-serif;
    --md-code-font: 'Inter', sans-serif;
    --md-footer-fg-color--light: #212223;
    --md-footer-fg-color--lighter: #212223;
    --md-footer-fg-color: #6F7376;

}

.md-search__inner  {

    .md-search__form {
        background-color: #ffffff;
        border: 1px solid #c2c9d4;
        border-radius: 4px;
    }

}

@media screen and (min-width: 60em) {
    .md-search__input + .md-search__icon {
        color: #212223;
    }

    .md-search__input::placeholder {
        color: #6F7376;
    }
}

.md-header {
    background-color: #ffffff;
    color: #212223;

    &[data-md-state='shadow'] {
        box-shadow: inherit;
    }

    .md-header__topic {
        display: none;
    }

    .md-logo {
        img[alt=logo] {
            height: 1.4rem;
            width: inherit;
        }
    }
}

.md-sidebar--primary {

    .md-nav__title, .md-nav__link {
        color: #212223;
    }

    .md-nav__link:hover {
        color: #6F7376;
    }

}

.md-sidebar__scrollwrap:hover {
    scrollbar-color: var(--md-default-fg-color--lighter) transparent;
}

.md-nav__link[for]:focus,
.md-nav__link[for]:hover,
.md-nav__link[href]:focus,
.md-nav__link[href]:hover {
    color: #6F7376;
}

.toc-card__btn.docs-page-feedback__btn.docs-feedback {
    color: #212223;
    border: 1px solid #DADCDE;
}

.md-sidebar--secondary {
    right: 0;
    transform: inherit;

    .md-sidebar__inner {
        border-left: 1px solid #c2c9d4;
    }

    .md-nav__title {
        text-transform: uppercase;
        color: #212223;
    }

    .md-nav--secondary > .md-nav__list {
        & > li {
            padding-left: 0.2rem;

            & > a {
                justify-content: inherit;
            }
        }
    }
}

// Main content
.md-container {

    .md-tabs {
        background-color: #ffffff;
        color: #212223;
    }

    main .md-main__inner {
        --md-default-fg-color--light: #212223;

        .md-typeset {
            font-size: 0.7rem;
        }

        h1 {
            font-weight: 400;
            font-family: 'ABCOtto', Georgia, sans-serif;
        }

        a {
            color: #212223;

            &:hover {
	        color: #6F7376;
            }
        }


        pre {
            background: #F0F3F6;
            border-radius: 3px;

            code {
                color: #212223;
                border: 0;

                .string {
                    color: #212223;
                }
            }
        }

        #content_search {
            display: none;
        }

        p img {
            max-width: 70%;
            display: block;
        }

        .admonition.note {
            p.admonition-title {
                background-color: #F0F3F6;
            }

            box-shadow: inherit;
            border: 1px solid #c2c9d4;

            .md-typeset details {
                box-shadow: inherit;
            }
        }
    }

    footer {
        .md-footer__inner {
            background-color: #F0F3F6;
            margin-left: 0;
            margin-right: 0;
            max-width: 100%;
        }
        .md-footer-meta {
            background-color: #ffffff;

            .md-footer-copyright {
                margin: 0 auto;
                font-size: 16px;
                display: inherit;

                & div::after {
                    content: " ";
                    display: inline;
                }

                & a::before {
                    content: " ";
                }
            }

        }
    }
}

.mdx-sek-home {
    min-height: calc(100vh - 6.4rem);
    display: flex;
    flex-direction: column;

    .categories {
        flex: 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
}

.mdx-container {
    text-align: center;
    font-size: initial;

    .maindescription {
        background: url("../assets/background-main.jpg") no-repeat;
        background-size: cover;

        padding-top: 5em;
        padding-bottom: 5em;
        text-align: left;

        .maindescription__inner {
	    margin-left: auto;
	    margin-right: auto;
	    max-width: 61rem;

            h1 {
                color: #212223;
                font-weight: 400;
                font-size: 48px;
                font-family: 'ABCOtto', sans-serif;
                line-height: 1.05;
            }

            p {
                color: #212223;
                font-size: 16px;
                font-weight: 400;
                line-height: 1.5;
            }
        }
    }

    .search {
        padding-top: 3em;
        background-color: #ffffff;

        display: flex;
        align-items: center;
        margin-top: 24px;

        /* flex-direction: row; */
        justify-content: center;
        align-items: flex-start;
        /* padding: 40px 148px; */


        img.search-image {
            width: 433px;
        }

        .search__inner {
            /* flex: 1 1; */

            margin: 5em;

            h2 {
                color: #212223;
                font-family: 'ABCOtto', Georgia, sans-serif;
                font-size: 40px;
                line-height: 48px;
            }

            .input {
                display: flex;
                align-items: center;
                margin: 12px 38px 8px 33px;
                height: 36px;
                border: 1px solid #c2c9d4;
                border-radius: 3px;
                background: #ffffff;
                max-width: 500px;
                margin: 0 auto;
                margin-top: 48px;

                input {
                    border: none;
                    width: calc(100% - 58px);
                    font-size: 14px;
                    line-height: 24px;
                    font-weight: 400;
                }
            }
        }

    }

    .categories {
        background-color: #F0F3F6;
        padding-top: 1em;
        padding-bottom: 3em;
        background-color: white;

        flex: 1;
        display: flex;
        flex-direction: column;
        justify-content: center;

        h2 {
            color: #212223;
            font-family: 'ABCOtto', Georgia, sans-serif;
            font-size: 24px;
            line-height: 36px;
        }

        .category {
            font-weight: 500;
            display: grid;
            column-gap: 24px;
            row-gap: 24px;
            grid-template-columns: repeat(auto-fit, 230px);

            flex-direction: row;
            justify-content: center;
            align-items: flex-start;
            padding: 40px 0;

            a {
                font-family:'Lost', sans-serif;
                font-size: 14px;
                line-height: 120%;
                text-decoration: none;
                color: #212223;
                border: 1px solid #DADCDE;
                border-radius: 4px;
                width: 220px;
                display: block;
                padding: 8px 0;
                text-transform: uppercase;

		&:hover {
		    background-color: #EEF0F2;
		    color: #212223;
		    border-color: #DADCDE;
		}

            }
        }
    }

    .support {
        padding-top: 3em;
        padding-bottom: 3em;
        background-color: #F0F3F6;

	.support__inner {
	    margin-left: auto;
	    margin-right: auto;
	    max-width: 61rem;
	    display: flex;

	    .col {
		flex: 33%;
		text-align:left;
		margin: 8px;
	    }
	    a {
		color: #212223;
	    }
	    p {
		color: #6f7376;
	    }
	    ul {
		list-style-type: none;
		padding: 0px;
		margin: 0px;
		li {
		    margin-top: 8px;
		}
	    }

	}

	.button {
            font-family:'Lost', sans-serif;
            font-weight: 500;
	        text-align:center;
            font-size: 14px;
            line-height: 120%;
            text-decoration: none;
            color: #212223;
            border: 1px solid #DADCDE;
	        background-color: #ffffff;
            border-radius: 4px;
            width: 220px;
            display: block;
            padding: 8px 0;
            text-transform: uppercase;

	    &:hover {
		background-color: #EEF0F2;
		color: #212223;
		border-color: #DADCDE;
	    }
	}


        h3 {
            color: #6f7376;
            font-size: 14px;
            font-weight: 500;
            font-family: 'lost', helvetica, sans-serif;
            margin-bottom: 16px;
            text-transform: uppercase;
        }

    }

    & + .md-main {
        display: none;
    }
}

// css related to the apis page
.sek-row {
    display: flex;
}

.sek-two-columns {
    flex: 50%;
}


.sek-cards {
    grid-template-columns: repeat(auto-fill,minmax(400px,400px));
    display: grid;
    margin: 4em auto;
    justify-content: space-between;
    grid-gap: 30px;
    max-width: 1260px;
}

.sek-card {
    padding: 2em 3em;
    border: 1px solid #DADCDE;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: baseline;
}

.sek-card a {
    font-family:'Lost', sans-serif;
    border: 1px solid #DADCDE;
    padding: 10px 15px;
    text-transform: uppercase;
    cursor: pointer;
    border-radius: 4px;
    margin-top: 10px;
    display: inline-block;
    text-decoration: none;
    color: #212223;
}
.sek-card a:hover {
    background: #EEF0F2;
}

.api {
    padding: 0;
    margin: 0;

    &:before {
        height: 0;
    }
}


.sek-submenu-api {
    background-color: #992a85;
    margin: 0;
    max-width: 100%;
    height: 40px;
    text-align: center;
    font-size: 16px;
    line-height: 40px;

    ul {
	margin: 0px;
	padding: 0px;

	li {
	    list-style-type: none;
	    display: inline;
	}

	li:not(:first-child):before {
	    content: " | ";
	}

    }
}

.md-typeset {

  // Tabbed container
  .tabbed-set {
    > input {


      // Tab label states
      @for $i from 100 through 21 {
        &:nth-child(#{$i}) {

          // Tab is active
          &:checked {

            // Tab label
            ~ .tabbed-labels > :nth-child(#{$i}) {
              @extend %tabbed-label;
            }

            // Tab content
            ~ .tabbed-content > :nth-child(#{$i}) {
              @extend %tabbed-content;
            }
          }

          // Tab label on keyboard focus
          &.focus-visible ~ .tabbed-labels > :nth-child(#{$i}) {
            @extend %tabbed-label-focus-visible;
          }
        }
      }
    }
  }
}

%tabbed-label {

  // [screen]: Show active state
  @media screen {
    color: var(--md-default-fg-color);

    // [no-js]: Show border (indicator is animated with JavaScript)
    .no-js & {
      border-color: var(--md-default-fg-color);
    }

    // Show border for tabs in tooltips
    [role="dialog"] & {
      border-color: var(--md-default-fg-color);
    }
  }
}

// Tab label on keyboard focus placeholder
%tabbed-label-focus-visible {
  color: var(--md-accent-fg-color);
}

// Tab content placeholder
%tabbed-content {
  display: block;
}

.md-banner {
    background: #ffff53;
    color: black;
}

